fixtures/frontend/milestone-2/invalid/duplicate-top-level-names/main.aivi
val title = "Primary"
val title = "Secondary"
